--- a/3.-Control y Desarrollo de Programas.ipynb
+++ b/3.-Control y Desarrollo de Programas.ipynb
@@ -428,11 +428,11 @@
       "execution_count": 14,
       "id": "fc738513-065b-4ede-be43-077f8cb20581",
       "metadata": {
-        "id": "fc738513-065b-4ede-be43-077f8cb20581",
-        "outputId": "c8c5fc23-a9c1-4c7d-d882-509e8633e92f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "fc738513-065b-4ede-be43-077f8cb20581",
+        "outputId": "c8c5fc23-a9c1-4c7d-d882-509e8633e92f"
       },
       "outputs": [
         {
@@ -455,11 +455,11 @@
       "execution_count": 5,
       "id": "609c2a31-d0c2-45bc-a645-4866d3718e8e",
       "metadata": {
-        "id": "609c2a31-d0c2-45bc-a645-4866d3718e8e",
-        "outputId": "3c13bc92-0448-4227-940a-f615ca96faa1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "609c2a31-d0c2-45bc-a645-4866d3718e8e",
+        "outputId": "3c13bc92-0448-4227-940a-f615ca96faa1"
       },
       "outputs": [
         {
@@ -513,11 +513,11 @@
       "execution_count": 19,
       "id": "2be519f0-0b2f-41cd-889a-324243b1c74e",
       "metadata": {
-        "id": "2be519f0-0b2f-41cd-889a-324243b1c74e",
-        "outputId": "f776ce6b-ffeb-4a8d-db88-73b64380032d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "2be519f0-0b2f-41cd-889a-324243b1c74e",
+        "outputId": "f776ce6b-ffeb-4a8d-db88-73b64380032d"
       },
       "outputs": [
         {
@@ -548,11 +548,11 @@
       "execution_count": 57,
       "id": "7269cb54-02c7-4b6f-b400-bc8b9d573d01",
       "metadata": {
-        "id": "7269cb54-02c7-4b6f-b400-bc8b9d573d01",
-        "outputId": "ad20385d-f4e2-4d0d-ce19-ce2001c355e1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7269cb54-02c7-4b6f-b400-bc8b9d573d01",
+        "outputId": "ad20385d-f4e2-4d0d-ce19-ce2001c355e1"
       },
       "outputs": [
         {
@@ -606,26 +606,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 1,
       "id": "016bb41a-99fd-4aee-aad0-ee994eb082cc",
       "metadata": {
-        "id": "016bb41a-99fd-4aee-aad0-ee994eb082cc",
-        "outputId": "9a39e867-f3d2-44da-9b5e-c8cce2f3d9c7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "016bb41a-99fd-4aee-aad0-ee994eb082cc",
+        "outputId": "ddd4ac82-7332-437c-99ad-333ad44b3361"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0, 1, 2, 3, 4, "
+            "0, 1, 2, 3, 4, 5, 6, 7, "
           ]
         }
       ],
       "source": [
-        "for i in range(5):\n",
+        "for i in range(8):\n",
         "  print(i, end= \", \")"
       ]
     },
@@ -643,13 +643,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "7b739677-ee9b-4511-aae4-e295dcf24242",
       "metadata": {
-        "id": "7b739677-ee9b-4511-aae4-e295dcf24242"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7b739677-ee9b-4511-aae4-e295dcf24242",
+        "outputId": "2e0733df-eae0-4081-cbb3-94b19e486f66"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n"
+          ]
+        }
+      ],
+      "source": [
+        "for i in range (1,10):\n",
+        "  print(i)\n",
+        "  if i == 8:\n",
+        "    break"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -669,13 +693,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "id": "793cbe1c-3303-4284-a5f9-da91d55cbcc6",
       "metadata": {
-        "id": "793cbe1c-3303-4284-a5f9-da91d55cbcc6"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "793cbe1c-3303-4284-a5f9-da91d55cbcc6",
+        "outputId": "ac6dc0aa-97e9-428a-9ffb-fd5af44ee6f6"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "132.5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ],
+      "source": [
+        "a = [130,85,210,45,153,78.5,264.5,94]\n",
+        "contador = 0\n",
+        "suma=0\n",
+        "for i in a:\n",
+        "  suma += i\n",
+        "  contador+=1\n",
+        "\n",
+        "promedio = suma/contador\n",
+        "promedio"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -691,14 +740,51 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "id": "6ae87f0a-c126-4686-a68a-718750cd6cb4",
       "metadata": {
-        "id": "6ae87f0a-c126-4686-a68a-718750cd6cb4"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6ae87f0a-c126-4686-a68a-718750cd6cb4",
+        "outputId": "af95e013-0fc8-48ee-d463-0f5b5d9a2b0a"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10800 2\n",
+            "11664 2\n",
+            "12597 2\n",
+            "13605 2\n",
+            "14693 2\n",
+            "15869 2\n",
+            "17138 2\n",
+            "18509 2\n",
+            "19990 2\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "19990.05"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ],
       "source": [
-        "\n"
+        "monto=10000\n",
+        "interes=.08\n",
+        "año = 10\n",
+        "for i in range(1, 10):\n",
+        "  monto +=  monto *interes\n",
+        "  print(round(monto),2)\n",
+        "\n",
+        "round(monto,2)\n"
       ]
     },
     {
@@ -721,13 +807,52 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 31,
       "id": "709467af-aa12-4e2b-a6f9-9ddbf3dc5cf4",
       "metadata": {
-        "id": "709467af-aa12-4e2b-a6f9-9ddbf3dc5cf4"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "709467af-aa12-4e2b-a6f9-9ddbf3dc5cf4",
+        "outputId": "e113b0d1-da71-49e9-f04d-7e943e07bc33"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "243\n",
+            "296\n",
+            "296\n",
+            "257\n",
+            "197\n",
+            "194\n",
+            "241\n",
+            "Felicidade, alcanzaste la meta\n"
+          ]
+        }
+      ],
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "ventaMeta=200\n",
+        "n = 8\n",
+        "nMetaAlcanzada = 0\n",
+        "nMetaNoAlcanzada = 0\n",
+        "\n",
+        "for i in range(1,n):\n",
+        "  venta = np.random.randint(180,300)\n",
+        "  print(venta)\n",
+        "  if venta > ventaMeta:\n",
+        "    nMetaAlcanzada+=1\n",
+        "  else:\n",
+        "    nMetaNoAlcanzada+=1\n",
+        "\n",
+        "if nMetaAlcanzada > 4:\n",
+        "  print(\"Felicidade, alcanzaste la meta\")\n",
+        "else:\n",
+        "    print(\"Lo siento, échale más ganas para la próxima\")"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -751,13 +876,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 43,
       "id": "5a56ad9a-8461-4b37-9822-ae169684fd99",
       "metadata": {
-        "id": "5a56ad9a-8461-4b37-9822-ae169684fd99"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5a56ad9a-8461-4b37-9822-ae169684fd99",
+        "outputId": "8bac5d88-8697-4680-f4c2-44b6c6c68a40"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Registra tu mailf\n",
+            "12365\n",
+            "No puede ser cliente\n"
+          ]
+        }
+      ],
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "mail = input(\"Registra tu mail\")\n",
+        "salario = np.random.randint(10000,30000)\n",
+        "print(salario)\n",
+        "if mail != \"\" and salario >= 20000:\n",
+        "  print(\"Posible Cliente\")\n",
+        "else:\n",
+        "  print(\"No puede ser cliente\")"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -771,13 +920,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 53,
       "id": "53f119f7-01eb-46d9-b9c8-be1eb9ecdcb2",
       "metadata": {
-        "id": "53f119f7-01eb-46d9-b9c8-be1eb9ecdcb2"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "53f119f7-01eb-46d9-b9c8-be1eb9ecdcb2",
+        "outputId": "a1e03e18-c3a4-4321-b248-7ad6ec5f623a"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "¿Tienes título?\n",
+            "Si eres posible candidato\n"
+          ]
+        }
+      ],
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "tit = input(\"¿Tienes título?\")\n",
+        "exp= np.random.randint(1,9)\n",
+        "\n",
+        "if tit == \"si\" or exp>=5:\n",
+        "  print(\"Si eres posible candidato\")\n",
+        "else:\n",
+        "  print(\"No eres posible candidato.\" + \" Tienes \" + str(exp) + \" años de experiencia.\")"
+      ]
     }
   ],
   "metadata": {
