--- a/4.- Funciones.ipynb
+++ b/4.- Funciones.ipynb
@@ -49,11 +49,11 @@
       "execution_count": 6,
       "id": "315753b7-f2b8-46d8-a61c-499e912f468a",
       "metadata": {
-        "id": "315753b7-f2b8-46d8-a61c-499e912f468a",
-        "outputId": "ea6b6426-0b42-4d0b-bad9-bad240ddeb63",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "315753b7-f2b8-46d8-a61c-499e912f468a",
+        "outputId": "ea6b6426-0b42-4d0b-bad9-bad240ddeb63"
       },
       "outputs": [
         {
@@ -86,11 +86,11 @@
       "execution_count": 10,
       "id": "24499624-16fa-4b44-b50d-a0a77dd65543",
       "metadata": {
-        "id": "24499624-16fa-4b44-b50d-a0a77dd65543",
-        "outputId": "744ef03a-f5a6-4761-ac2b-151a08236fc0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "24499624-16fa-4b44-b50d-a0a77dd65543",
+        "outputId": "744ef03a-f5a6-4761-ac2b-151a08236fc0"
       },
       "outputs": [
         {
@@ -158,11 +158,11 @@
       "execution_count": 17,
       "id": "3b7ece1c-8e0a-4ea0-8166-64dd75e4661a",
       "metadata": {
-        "id": "3b7ece1c-8e0a-4ea0-8166-64dd75e4661a",
-        "outputId": "fae006b6-75e8-4330-edab-e4c66397d272",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "3b7ece1c-8e0a-4ea0-8166-64dd75e4661a",
+        "outputId": "fae006b6-75e8-4330-edab-e4c66397d272"
       },
       "outputs": [
         {
@@ -202,23 +202,53 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "id": "8f4f0077-7108-42ce-942e-e12ee8744582",
       "metadata": {
         "id": "8f4f0077-7108-42ce-942e-e12ee8744582"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "def maxcuadra(num1,num2,num3):\n",
+        "  \"\"\"Esta función trae el máximo producto de 3 raices cuadradas\"\"\"\n",
+        "  raiz1 = num1 ** (1/2)\n",
+        "  raiz2 = num2 ** (1/2)\n",
+        "  raiz3 = num3 ** (1/2)\n",
+        "  raizmax = raiz1\n",
+        "  if raiz2 > raiz1:\n",
+        "    raizmax=raiz2\n",
+        "  elif raiz3> raiz2:\n",
+        "    raizmax=raiz3\n",
+        "\n",
+        "  return raizmax"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "id": "8d9ccb53-92c1-4ff9-9202-543fa6c640d3",
       "metadata": {
-        "id": "8d9ccb53-92c1-4ff9-9202-543fa6c640d3"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8d9ccb53-92c1-4ff9-9202-543fa6c640d3",
+        "outputId": "a28cef18-c6d9-4385-c0c8-7dc5ef746985"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "13.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ],
+      "source": [
+        "maxcuadra(169,81,25)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -260,6 +290,64 @@
         "#### Por tu cuenta\n",
         "\n",
         "Llama la función max con la lista 15,82,13,55 como argumento, yluego la min con la palabara amarillo como argumento"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "max(15,82,13,55)"
+      ],
+      "metadata": {
+        "id": "RFu90kVHErQT",
+        "outputId": "b7df77b1-e648-4e59-e1b4-ac59a8d7d042",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "RFu90kVHErQT",
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "82"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "min(\"membrillo\")"
+      ],
+      "metadata": {
+        "id": "j6idC7FJEyNS",
+        "outputId": "452c6852-0213-47b6-fdd6-2526289950c1",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "id": "j6idC7FJEyNS",
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'b'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
       ]
     },
     {
