--- a/5.-Listas y Tuplas.ipynb
+++ b/5.-Listas y Tuplas.ipynb
@@ -65,11 +65,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "bc1858c1-4645-4ef3-a58c-9caa9b434a73",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import chromedriver_py"
+   ]
   },
   {
    "cell_type": "code",
@@ -339,11 +341,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "f2366bbd-3549-4a16-af7c-85904b3bbf0c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "datos_cliente=()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -355,19 +359,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "d7ea6549-4285-42ed-9595-141b324b0d8d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "datos_cliente = \"Paty\", \"F\", \"27\""
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "8092a924-571e-4c01-877c-3343992080dc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Paty', 'F', '27')"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datos_cliente"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -379,11 +398,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "451ff4ad-e817-4f00-b48e-3291b5e47618",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El año que nació Paty es 1998 y tiene 27 años al 2025\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"El año que nació\", datos_cliente[0] , \"es\", 2025- int(datos_cliente[2]), \"y tiene\",  datos_cliente[2] , \"años al 2025\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -395,35 +424,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "1f4b9f03-8cc1-47a4-b60c-a9faced7fcd0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "datos_p1=(\"Hugo\",[1.75,60,1992])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "4e870462-6ac0-4da5-84d7-7721842e108c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "nombre, datos = datos_p1            "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "9568689e-c811-4fce-be49-6a7d6319e0d8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hugo'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nombre"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "4045957b-b011-4f30-873f-842dbd6a372e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1.75, 60, 1992]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datos   "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -435,27 +494,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "9d72b043-b0c5-49cb-b7c5-650d0d2d9687",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "primera, segunda, tercera = \"ahí\""
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "58736758-30e0-4b06-9bba-cee7cd305dca",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'a'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "primera"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "5dd0b92b-5211-4daa-9593-33d77c724ed1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'h'"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "segunda"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -471,23 +558,51 @@
    "id": "53fe6f63-23f3-4fcb-81ee-f1932d4adfe8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "estatura, peso, temperatura = (1.7,68,43)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "700c9144-5de5-4b55-83e1-fbc39f090da7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.7"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "estatura"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "30bc0060-b70f-405d-bf50-2fa9f6e72719",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "43"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temperatura"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -499,27 +614,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "04495cc6-7468-4d22-b572-f035bdb6695d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "students = (\"Hugo\", \"Paco\", \"Luis\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "84ed760d-fb28-43cb-b20a-8971b227b453",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((0, 'Hugo'), (1, 'Paco'), (2, 'Luis'))"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tuple(enumerate(students))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "3340c6f3-41a7-4abe-bf54-6bf210e5a39e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, 'Hugo'), (1, 'Paco'), (2, 'Luis')]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(enumerate(students))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -532,6 +675,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "15f7a3ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tuple"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = (582.4,)\n",
+    "type(n)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "fc8ebfbf-8f9c-4fde-85ce-11839d12e340",
    "metadata": {},
@@ -539,6 +704,30 @@
     "#### Por tu cuenta\n",
     "\n",
     "Muestra que pasa si intentas concatenar una lista de 3 enteros con una tupla de 3 enteros usando +"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "1d6f5722",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Luis', 2, 6, 'Juan', 4, 2)"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x1 = (\"Luis\", 2 , 6)\n",
+    "x2 = [\"Juan\", 4 , 2]\n",
+    "#list(x1) + x2\n",
+    "x1 + tuple(x2)"
    ]
   },
   {
@@ -559,19 +748,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "id": "42058ae5-f784-412b-8470-2b7f2c229c3e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "potencias = [2,4,8,16,32,64,128,256]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "c38bf316-ff05-45e9-afc9-622b65d003f8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[16, 32]"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "potencias[3:5]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -583,11 +787,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "id": "2ded3131-a702-4467-a906-c8e9821e846c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[16, 32]"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "potencias[3:5]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -599,11 +816,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "3c5bbac0-ed79-483b-ad46-b1ec64bb76a3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 4, 8, 16, 32, 64]"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "potencias[:6]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -615,11 +845,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "id": "7bcfbdbc-f0f2-44c4-b59b-2c9f8e4ec93d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[16, 32, 64, 128, 256]"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "potencias[3:]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -631,11 +874,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "id": "5ae3fa58-9a65-40af-af88-bd03be1753b2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 4, 8, 16, 32, 64, 128, 256]"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "potencias[:]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -647,11 +903,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "id": "dc1f41f6-156c-4c75-ba27-ff30655d5d0e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 16, 128]"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "potencias[0::3]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -663,11 +932,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "id": "67dfc2aa-e7fb-4618-b06d-efc838aaffe8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[256, 128, 64, 32, 16, 8, 4, 2]"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "potencias[::-1]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -679,19 +961,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "id": "55433e0e-0d85-44aa-bd82-51b63d02b594",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "potencias[0:3] = [\"dos\", \"cuatro\", \"ocho\"]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "id": "e01238e9-68ce-498c-8d3e-35537a289094",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['dos', 'cuatro', 'ocho', 16, 32, 64, 128, 256]"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "potencias"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -703,35 +1000,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "id": "693215b6-3b49-47f2-9153-bf902a39c87c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "potencias[0:2] =[]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "id": "e3c4aa21-3166-463a-9602-7fb8befd2ebe",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "potencias = [2,4,8,16,32,64,128,256]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "id": "64f0cfdb-9dd5-4b25-8a51-3cfa738d7dba",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# cambiar 1 cada 3 elementos\n",
+    "potencias[::3] = [1,1,1]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "id": "23f10cd9-f3e5-4333-a668-cb6a44c98549",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 8, 1, 32, 64, 1, 256]"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "potencias"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -749,75 +1066,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "id": "bea74808-8298-4fe0-9c48-457ce0f055b7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num = list(range(1,16))\n",
+    "num"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d2e85b6a-f33f-444b-a1f1-e2f2dc3cbd38",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "id": "971effa8-4e76-4e87-a741-a9eb06b284cf",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 0, 0, 0, 0, 0, 11, 12, 13, 14, 15]"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num[5:10] = [0,0,0,0,0]\n",
+    "num"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c840c3e0-b882-4466-9dbf-231dccb35d1c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "id": "646db8e8-c8b2-42fd-a8e5-3438903b2bf7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5]"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num[5:16] = []\n",
+    "num"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "id": "c84cf979-7cfe-4e03-aa5d-a2e48910b705",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "be95f7f3-3adf-4da8-9b05-23dc3b05c5f3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3caa6b02-62ab-4387-9f95-20e8bdfc2fea",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f092dbdf-7ae4-4292-b315-1f11b5726574",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num[:] = []\n",
+    "num"
+   ]
   },
   {
    "cell_type": "markdown",
