--- a/7.-Arreglos con Numpy.ipynb
+++ b/7.-Arreglos con Numpy.ipynb
@@ -36,11 +36,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2cde2abf-8d84-467b-b59d-d8866870e94f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -52,11 +54,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b4d6af33-6688-4dd8-9970-0a2e06491112",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  1,   2,   6,  24, 120,  70])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "factoriales = np.array([1,2,6,24,120,70])\n",
+    "factoriales"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -68,11 +84,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "9f0bcf80-e875-43f6-8768-a710cc9348c7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(factoriales)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -84,11 +113,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "be75e011-3b03-44a4-9e6c-cad9c045bca4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 2,  3,  4],\n",
+       "       [ 5,  6,  7],\n",
+       "       [ 8,  9, 10]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array([[2,3,4],\n",
+    "         [5,6,7],\n",
+    "         [8,9,10]])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -102,11 +148,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "361d9943-b067-4a77-8ffa-99ac2297267f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1,  3,  5,  7,  9, 11, 13, 15, 17, 19, 21, 23, 25, 27, 29])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array([i for i in range(1,31) if i % 2 == 1])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1824,7 +1883,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
