--- a/7.-Arreglos con Numpy.ipynb
+++ b/7.-Arreglos con Numpy.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "2cde2abf-8d84-467b-b59d-d8866870e94f",
    "metadata": {},
    "outputs": [],
@@ -189,19 +189,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "4c3638cb-f453-45fd-a7f2-d2498c6a45df",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f251b26b-e5b1-4899-b2f7-a123d0aa0343",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "enteros = np.array([[9,10,11,12],[8,7,6,5]])\n",
+    "\n",
+    "flotantes=np.array([[9**(1/2),10**(1/2),3.33,],[10/3,3.4,3.03]])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -213,19 +209,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "16a77235-c2b1-481d-83d0-868b5ae497c6",
+   "execution_count": 5,
+   "id": "f251b26b-e5b1-4899-b2f7-a123d0aa0343",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('int64')"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "enteros.dtype"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "178aec35-04c4-4ee6-aede-9e7e8040ec72",
+   "execution_count": 6,
+   "id": "29ef3451",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('float64')"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flotantes.dtype"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -237,19 +259,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "fc0831b6-2514-4266-a070-fabf58ba64da",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 4)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "enteros.ndim\n",
+    "enteros.shape"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "9bf00a06-b6ca-4e4b-acfd-c6aa2e1f7056",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 3)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flotantes.ndim\n",
+    "flotantes.shape"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -261,11 +311,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "31222166-9d8a-4f67-b823-79ae42350f17",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#enteros.size\n",
+    "enteros.itemsize"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -277,11 +341,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "90e1bada-72bd-4fb3-a539-0f40aa3734a3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.0 ,3.1622776601683795 ,3.33 ,3.3333333333333335 ,3.4 ,3.03 ,"
+     ]
+    }
+   ],
+   "source": [
+    "for fila in flotantes:\n",
+    "    for columna in fila:\n",
+    "        print(columna, end=\" ,\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -295,27 +371,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "992b5cc8-7814-41d3-8d20-138b12f9b93e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1,  3,  5,  7,  9, 11, 13, 15, 17, 19, 21, 23, 25, 27, 29])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = np.array([i for i in range(1,31) if i % 2 == 1])\n",
+    "n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "b381994a-8b83-4cd4-b0b6-7ff1d3910730",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n.ndim"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "e956c03d-16ae-49a9-916d-ec2ca6d8a2c8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(15,)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n.shape"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -339,27 +455,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "398b8572-3b35-4a9b-b3d2-df69be4b8c62",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 3, 4, 5, 6, 7])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.arange(0,8)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "5dddb086-837f-46fb-8129-78913c9045fc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3, 4, 5, 6, 7])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.arange(3,8)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "70d50bbe-7686-4514-be0a-089b18f83551",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([12,  9,  6,  3,  0])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.arange(12,-1,-3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -371,11 +526,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "b532a32c-f674-48f8-bb15-9ebb58120172",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.  , 0.25, 0.5 , 0.75, 1.  ])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linspace(0.0,1.0, num=5)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -387,11 +555,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "82dd73a2-4e8e-4dd8-a3c3-9132dc655b22",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[21, 20, 19, 18, 17, 16, 15, 14, 13, 12],\n",
+       "       [11, 10,  9,  8,  7,  6,  5,  4,  3,  2]])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.arange(21,1,-1).reshape(2,10)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -403,11 +585,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "b6948944-d77f-440d-a781-30fb1cf26565",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[   0,    1,    2, ...,  997,  998,  999],\n",
+       "       [1000, 1001, 1002, ..., 1997, 1998, 1999],\n",
+       "       [2000, 2001, 2002, ..., 2997, 2998, 2999],\n",
+       "       ...,\n",
+       "       [7000, 7001, 7002, ..., 7997, 7998, 7999],\n",
+       "       [8000, 8001, 8002, ..., 8997, 8998, 8999],\n",
+       "       [9000, 9001, 9002, ..., 9997, 9998, 9999]], shape=(10, 1000))"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.arange(0,10000).reshape(10,1000)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -421,11 +622,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "8a01c49c-d067-4e8e-aade-42784ffc2340",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[42, 44, 46, 48, 50],\n",
+       "       [52, 54, 56, 58, 60],\n",
+       "       [62, 64, 66, 68, 70],\n",
+       "       [72, 74, 76, 78, 80]])"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.arange(42,82,2).reshape(4,5)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -445,19 +662,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "bd3bd30e-876d-4935-8c75-214fe973d19f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import random"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "4a0215ff-a5b2-4638-b4ae-22f48066cbc3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.15 s ± 115 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit tiros = [random.randint(1,6) for i in range(0,6000000)]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -471,11 +700,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "34fd2bed-c4cc-4cf7-96ef-9f0b505f957f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "68 ms ± 6.59 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit tiros = np.random.randint(1,6,6000000)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -489,11 +728,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "id": "a6e227ad-e538-42a0-839a-ce702f63fddb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "276 ms ± 25.4 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit [sum(range(9999999))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "5eb0bb8a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22.5 ms ± 1.32 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit [np.arange(9999999).sum()]"
+   ]
   },
   {
    "cell_type": "markdown",
